--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
         <div class="six">
             <img src="irene.jpg" alt="profile" class="profile-picture" id="imagePath"/>
-            <img src="hatt.svg" alt="hat" class="hat" />
+            <img src="hat.svg" alt="hat" class="hat" />
             <div class="wish">
                 <h3 class="wish-hbd">Happy Birthday!</h3>
                 <h5 id="wishText">May the js.prototypes always be with you! ;)</h5>
